# rubiks-cube-robot

./: README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  OLED.c  cmake_install.cmake  color_detect.c  color_detect.h  cube_robot.c  cube_robot.dis  cube_robot.elf  cube_robot.elf.map  cube_robot.hex  cube_robot.uf2  prun_table.c  prun_table.h  solve.c  solve.h
src/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
src/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
src/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
src/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
src/pico-sdk/: Makefile  cmake_install.cmake
src/pico-sdk/docs/: Makefile  cmake_install.cmake
src/pico-sdk/src/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
src/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
src/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
src/pico-sdk/tools/: Makefile  cmake_install.cmake
src/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
src/tools/: Makefile  rubiks_cube.py  serial_port.py  solve.c  solve.py  solve_2.py  test_case.txt
(+152 files in other folders)
